--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+::-webkit-scrollbar{
+  width: 0;
+}
+@media only screen and (max-width: 600px){
+  .contacts-div{
+    position: relative!important;
+  }
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
